# trek

./: .clippy.toml  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build-wasm.sh  build.rs  cliff.toml  example.html  index.html  rustfmt.toml  serve.py  test-wasm.html
.clifftemplates/: release.md
.github/workflows/: crates-publish.yml  deploy-playground.yml  npm-publish.yml  release.yml  worker-ci.yml
docs/: README.md  api-reference.md  architecture.md  examples.md  extractor-guide.md  getting-started.md  publishing.md
docs/refactor/: track-0-gap-analysis.md  track-a-test-harness.md  track-b-markdown.md  track-c-standardize-removals.md  track-d-elements.md  track-e-extractors.md  track-f-worker.md
examples/: basic.rs  count_markdown_fixtures.rs  extract_file.rs
playground/: index.html
scripts/: bump-version.sh  fix-package-json.js  validate-commit.sh
scripts/refactor/: compare-fixture.sh
src/: constants.rs  content_boundary.rs  error.rs  extractor.rs  html_to_text.rs  lib.rs  metadata.rs  scoring.rs  standardize.rs  standardize_legacy.rs  types.rs  utils.rs  wasm.rs
src/dom/: mod.rs  walk.rs
src/elements/: callouts.rs  code.rs  footnotes.rs  headings.rs  images.rs  mod.rs  util.rs
src/elements/math/: base.rs  mod.rs
src/extractors/: bbcode_data.rs  bluesky.rs  c2_wiki.rs  chatgpt.rs  claude.rs  discourse.rs  farcaster.rs  gemini.rs  github.rs  grok.rs  hackernews.rs  leetcode.rs  linkedin.rs  lwn.rs  mastodon.rs  medium.rs  mod.rs  nytimes.rs  reddit.rs  substack.rs  threads.rs  twitter.rs  wikipedia.rs  x_article.rs  x_oembed.rs  youtube.rs
src/markdown/: code.rs  escape.rs  figures.rs  links.rs  mod.rs  tables.rs  util.rs
src/removals/: content_patterns.rs  hidden.rs  metadata_block.rs  mod.rs  scoring.rs  selectors.rs  small_images.rs
src/standardize/: TODO.md  code_blocks.rs  figure_image.rs  flatten_wrappers.rs  footnotes.rs  headings.rs  mod.rs  promote_semantics.rs  relative_urls.rs  tables.rs
tests/: farcaster_test.rs  fixtures_test.rs  integration_test.rs
tests/common/: mod.rs
tests/expected/: author-contact-block.md  author-share-widget.md  callouts--obsidian-publish-callouts.md  code-blocks--chroma-linenums.md  code-blocks--hexo-br.md  codeblocks--chatgpt-codemirror.md  codeblocks--chroma-inline-linenums.md  codeblocks--chroma-line-spans.md  codeblocks--code-pre-nesting.md  codeblocks--flex-row-gutter.md  codeblocks--hljs-header.md  codeblocks--mintlify.md  codeblocks--pygments-lineno.md  codeblocks--react-syntax-highlighter-linenums.md  codeblocks--rehype-pretty-code.md  codeblocks--rehype-pretty-copy.md  codeblocks--rockthejvm.com-articles-kotlin-101-type-classes.md  codeblocks--rouge-linenums.md  codeblocks--stripe.md  comments--mastodon.social-@user-12345678.md  comments--news.ycombinator.com-item-id=12345678.md  comments--old.reddit.com-r-test-comments-abc123-test_post.md  content-patterns--card-grid-stripped-headings.md  content-patterns--code-block-boilerplate-and-trailing-section.md  content-patterns--content-list-with-internal-links.md  content-patterns--heading-introduced-list.md  content-patterns--iso-date-and-read-time.md  content-patterns--leading-breadcrumb.md  content-patterns--live-blog-metadata.md  content-patterns--non-semantic-hero-header.md  content-patterns--social-counter-link.md  content-patterns--social-engagement-counter.md  content-patterns--socket-dev-blog.md  content-patterns--table-of-contents.md  content-patterns--trailing-related-posts.md  content-patterns--trailing-subscribe-after-footnotes.md  custom-elements--swiper-carousel.md  elementor--archive-page.md  elements--base64-placeholder-removal.md  elements--bootstrap-alerts.md  (+150 more)
tests/fixtures/: SOURCE.md  author-contact-block.html  author-share-widget.html  callouts--obsidian-publish-callouts.html  code-blocks--chroma-linenums.html  code-blocks--hexo-br.html  codeblocks--chatgpt-codemirror.html  codeblocks--chroma-inline-linenums.html  codeblocks--chroma-line-spans.html  codeblocks--code-pre-nesting.html  codeblocks--flex-row-gutter.html  codeblocks--hljs-header.html  codeblocks--mintlify.html  codeblocks--pygments-lineno.html  codeblocks--react-syntax-highlighter-linenums.html  codeblocks--rehype-pretty-code.html  codeblocks--rockthejvm.com-articles-kotlin-101-type-classes.html  codeblocks--rouge-linenums.html  codeblocks--stripe.html  comments--mastodon.social-@user-12345678.html  comments--news.ycombinator.com-item-id=12345678.html  comments--old.reddit.com-r-test-comments-abc123-test_post.html  content-patterns--card-grid-stripped-headings.html  content-patterns--code-block-boilerplate-and-trailing-section.html  content-patterns--content-list-with-internal-links.html  content-patterns--heading-introduced-list.html  content-patterns--live-blog-metadata.html  content-patterns--non-semantic-hero-header.html  content-patterns--social-counter-link.html  content-patterns--social-engagement-counter.html  content-patterns--socket-dev-blog.html  content-patterns--trailing-subscribe-after-footnotes.html  custom-elements--swiper-carousel.html  elementor--archive-page.html  elements--base64-placeholder-removal.html  elements--bootstrap-alerts.html  elements--br-between-blocks.html  elements--complex-tables.html  elements--data-table.html  elements--embedded-videos.html  (+133 more)
wasm-test/: Cargo.toml
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/src/: extract.ts  index.ts  security.ts
