[package]
name = "trek-rs"
version = "0.2.1"
edition = "2024"
authors = ["christopherwxyz"]
description = "A web content extraction library that removes clutter from web pages"
repository = "https://github.com/officialunofficial/trek"
license = "MIT"
keywords = ["html", "parsing", "extraction", "readability", "wasm"]
categories = ["web-programming", "text-processing", "wasm"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# HTML parsing
lol_html = "1.2"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Window",
    "CssStyleDeclaration",
    "DomRect",
] }
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# HTML utilities
html-escape = "0.2"

# Regex for pattern matching
regex = "1.10"
once_cell = "1.19"

# Error handling
eyre = "0.6"
color-eyre = "0.6"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-wasm = "0.2"
url = "2.5.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[workspace]
members = ["."]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
uninlined_format_args = "allow"
multiple_crate_versions = "allow"
redundant_clone = "allow"
significant_drop_tightening = "allow"
items_after_statements = "allow"
unused_self = "allow"
